Fixed styles for mobile transactions component (#91)
* added general styles, downloaded and imported fomts, downloaded and squashed images

* changed colors in body styles

* added summary component

* deleted unused branch, pull all changes from main branch

* add sceleton for mobile transaction list component

* translated russian titles of months to English, added styles to mobile transaction list

* add logic to TransactionSummary and TransactionListMobileComponents

* fixed logic of TransactionSummary component

* fixed logic of TransactionSummaryComponent

* fixed TransactionSummary

* fixed styles

* fixed styles for mobile list with transactions

--- a/src/modules/moduleHome/components/TransactionListMobile/TransactionListMobile.module.scss
+++ b/src/modules/moduleHome/components/TransactionListMobile/TransactionListMobile.module.scss
@@ -2,7 +2,9 @@
   display: flex;
   // margin: auto;
   // padding: 0 20px;
+  width: 100%;
   max-width: 282px;
+  margin: 0 auto;
 }
 
 .mobileList {
@@ -32,7 +34,6 @@
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.04em;
-  // text-transform: uppercase;
   color: var(--text-biege);
 }
 
@@ -55,7 +56,7 @@
 .ammountWrapper {
   display: flex;
   gap: 8px;
-  align-items: baseline;
+  align-items: center;
 }
 
 .transactionAmount {
